Fix next/previous post preview squishing

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -216,6 +216,8 @@ h2#gallery {
   opacity: 50%;
 }
 
+// footer
+
 .post-footer {
   display: flex;
   justify-content: space-evenly;
@@ -230,15 +232,19 @@ h2#gallery {
   font-weight: 500;
 }
 
+// gallery item
+
 .fj-gallery-item {
   position: relative;
+  // "standalone" is for items that are not
+  // in a gallery
   &.standalone {
     margin: 1rem;
     img {
       // max-width: 40vw;
       max-height: 20rem;
       // object-fit: contain;
-      height: 100%;
+      // height: 100%;
     }
   }
   cursor: pointer;
